# efficient-bosonic-tomography

./: .gitignore  CITATION.cff  README.md  pyproject.toml
scripts/: four mode wigner wandb(fig4ab,fig5).py  plot_displacement_operator.ipynb  single mode MLE.py  single mode cvx old method.ipynb  single mode new method.py  two mode wigner fig3 PDG and SPDG.py  two mode wigner qst convex conic constraint fig3.ipynb  two mode wigner wandb important sampling fig6.py
src/efficient_bosonic_tomography/: displacer.py  four mode wigner wandb(fig4ab,fig5).py  generate_data.py  plot_displacement_operator.ipynb  single mode MLE.py  single mode cvx old method.ipynb  single mode new method.py  two mode wigner fig3 PDG and SPDG.py  two mode wigner qst convex conic constraint fig3.ipynb  two mode wigner wandb important sampling fig6.py
tests/: test_displacer.py  test_generate_data.py
