[project]
name = "efficient_bosonic_tomography"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deprecated>=1.3.1",
    "dynamiqs==0.3.4",
    "jax[cuda12]==0.6.2",
    "numpyro[cuda12]>=0.19.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
