[project]
name = "efficient_bosonic_tomography"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deprecated>=1.3.1",
    "dynamiqs==0.3.3",
    "jax[cuda12]==0.7.0",
    "numpyro[cuda12]>=0.19.0",
    "cvxpy==1.6.0",
    "numpy==2.3.0",
    "pandas==2.2.2",
    "qutip==5.2.0",
    "joblib==1.4.2",
    "tqdm==4.66.5",
    "matplotlib==3.9.2",
    "openpyxl==3.1.5",
    "wandb>=0.23.1",
    "optax>=0.2.6",
    "scienceplots>=2.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
